[package]
name = "slac"
version = "0.5.0"
authors = ["Dennis Prediger <dennis.prediger@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "The \"Simple Logic & Arithmetic Compiler\" transforms a single expression into an abstract syntax tree."
categories = ["compilers", "parsing"]
license = "Apache-2.0"
repository = "https://github.com/DennisPrediger/SLAC"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
minify = "1.3"
serde_json = { version = "1.0" }
