[package]
name = "slac"
version = "0.13.0"
authors = ["Dennis Prediger <dennis.prediger@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "The \"Simple Logic & Arithmetic Compiler\" transforms a single expression into an abstract syntax tree."
categories = ["compilers", "parsing"]
license = "Apache-2.0"
repository = "https://github.com/DennisPrediger/SLAC"
readme = "README.md"

[features]
default = ["serde", "chrono", "regex"]

serde = ["dep:serde"]
chrono = ["dep:chrono"]
regex = ["dep:regex-lite"]
zero_based_strings = []

[dependencies]
chrono = { version = "0.4", optional = true, features = ["std"] }
getrandom = "0.2"
regex-lite = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
minify = "1.3"
serde_json = { version = "1.0" }
